--- a/index.html
+++ b/index.html
@@ -98,21 +98,21 @@
       </section>
       <section class="icon-row">
         <article class="row-flex">
-          <div class="icon-box wow fadeIn">
+          <div class="icon-box icb1 wow fadeInUp">
             <i class="cf cf-chc"></i>
             <h3>Blockchain Technology</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat. </p>
           </div>
-          <div class="icon-box wow fadeIn">
+          <div class="icon-box icb2 wow fadeInUp">
             <i class="cf cf-btc"></i>
             <h3>Investment</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat. </p>
           </div>
-          <div class="icon-box wow fadeIn">
+          <div class="icon-box icb3 wow fadeInUp">
             <i class="cf cf-senc"></i>
             <h3>Desktop Wallets</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -121,23 +121,23 @@
           </div>
         </article>
       </section>
-      <section class="icon-row icon-row-2">
+      <section class="icon-row icb1 icon-row-2">
         <article class="row-flex">
-          <div class="icon-box wow fadeIn">
+          <div class="icon-box wow fadeInUp">
             <i class="cf cf-coss"></i>
             <h3>Liquidity</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat. </p>
           </div>
-          <div class="icon-box wow fadeIn">
+          <div class="icon-box icb2 wow fadeInUp">
             <i class="cf cf-day"></i>
             <h3>Fast Transfers</h3>
             <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat.</p>
           </div>
-          <div class="icon-box wow fadeIn">
+          <div class="icon-box icb3 wow fadeInUp">
             <i class="cf cf-sent"></i>
             <h3>Security</h3>
             <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -290,10 +290,7 @@
             </ul>
           </div>
         </div>
-        <span class="min-chart" id="chart-sales" data-percent="56">
-          <span class="percent"></span>
-        </span>
-        <h5><span class="label green badge">Sales <i class="fas fa-arrow-circle-up"></i></span></h5>
+        
     </div>
       </footer>
       </main>
