--- a/contact-us.html
+++ b/contact-us.html
@@ -72,7 +72,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-8">
-              <form class="  p-5 contact-page-1" id="contact-form" name="contact-form" action="mail.php" method="POST">
+              <form class="  p-5 contact-page-1 contactpage1" id="contact-form" name="contact-form" action="mail.php" method="POST">
                 <p class="h4 mb-4">CONTACT US</p>
   
                 <!--Grid row-->
