--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 </head>
 <body>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
-      <a class="navbar-brand" href="index.html"><img src="img/logo-main-3.png" class="logo-main"></a>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar header" id="header_nav">
+      <a class="navbar-brand" href="index.html"><img src="img/logo-main-3.png" class="logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -98,21 +98,21 @@
       </section>
       <section class="icon-row">
         <article class="row-flex">
-          <div class="icon-box icb1 wow fadeInUp">
+          <div class="icon-box icb1 wow fadeIn">
             <i class="cf cf-chc"></i>
             <h3>Blockchain Technology</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat. </p>
           </div>
-          <div class="icon-box icb2 wow fadeInUp">
+          <div class="icon-box icb2 wow fadeIn">
             <i class="cf cf-btc"></i>
             <h3>Investment</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat. </p>
           </div>
-          <div class="icon-box icb3 wow fadeInUp">
+          <div class="icon-box icb3 wow fadeIn">
             <i class="cf cf-senc"></i>
             <h3>Desktop Wallets</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -123,21 +123,21 @@
       </section>
       <section class="icon-row icb1 icon-row-2">
         <article class="row-flex">
-          <div class="icon-box wow fadeInUp">
+          <div class="icon-box wow fadeIn">
             <i class="cf cf-coss"></i>
             <h3>Liquidity</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
               ea commodo consequat. </p>
           </div>
-          <div class="icon-box icb2 wow fadeInUp">
+          <div class="icon-box icb2 wow fadeIn">
             <i class="cf cf-day"></i>
             <h3>Fast Transfers</h3>
             <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
               labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
               aliquip ex ea commodo consequat.</p>
           </div>
-          <div class="icon-box icb3 wow fadeInUp">
+          <div class="icon-box icb3 wow fadeIn">
             <i class="cf cf-sent"></i>
             <h3>Security</h3>
             <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
@@ -366,6 +366,7 @@
   <script>
     var rellax = new Rellax('.rellax');
   </script>
+  
   
 
 </body>
