--- a/cryptocurrency-blog.html
+++ b/cryptocurrency-blog.html
@@ -70,7 +70,7 @@
     <section class="contact">
       <article class="blog">
         <!-- Default form register -->
-        <div class="container">
+        <div class="container blogcontainer">
           <div class="row">
             <div class="col-md-8">
               <article class="blog-1">
