--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
   <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar header" id="header_nav">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark scrolling-navbar">
       <a class="navbar-brand" href="index.html"><img src="img/logo-main-3.png" class="logo"></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -54,7 +54,6 @@
     <main>
       <section class="main-1 rellax" data-rellax-speed="-1">
         <article>
-          <div class="content-1">
             <div class="content">
               <h1 class="content1-h1 animated zoomIn">Welcome to JSBI</h1>
               <h2 class="content1-h2 animated zoomIn">Helping You Purchase and Invest Cryptocurrency</h2>
@@ -62,12 +61,14 @@
                 <a href="#content1" id="mybtn" class="btn-1">Invest</a>
                 <a href="cryptocurrency-blog.html" id="mybtn" class="btn-2">Read More</a>
               </div>
-              <p class="animated zoomIn"><em>Our team of expert crytpocurrency investors can help you invest in a secure and profitable way!</em></p>
+                <div>
+                  <p class="animated zoomIn"><em>Our team of expert crytpocurrency investors can help you invest in a secure and profitable way!</em></p>
+
+                </div>
   
               <!-- Use a button to pause/play the video with JavaScript 
       <button id="myBtn" onclick="myFunction()">Pause</button>
       -->
-            </div>
           </div>
         </article>
       </section>
@@ -78,8 +79,7 @@
           <div class="container-1">
             <h2>Why Invest in Cryptocurrency?</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat.</p>
+              dolore magna aliqua. </p>
           </div>
         </article>
       </section>
@@ -90,8 +90,7 @@
           <div class="container-2">
             <h2>How We Can Help You Invest</h2>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat.</p>
+              dolore magna aliqua. </p>
           </div>
           <img src="img/bitcoin_2007769_1920.jpg" alt="" class="picture-2">
         </article>
@@ -102,22 +101,19 @@
             <i class="cf cf-chc"></i>
             <h3>Blockchain Technology</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. </p>
+              dolore magna aliqua.  </p>
           </div>
           <div class="icon-box icb2 wow fadeIn">
             <i class="cf cf-btc"></i>
             <h3>Investment</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. </p>
+              dolore magna aliqua.  </p>
           </div>
           <div class="icon-box icb3 wow fadeIn">
             <i class="cf cf-senc"></i>
             <h3>Desktop Wallets</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. </p>
+              dolore magna aliqua.  </p>
           </div>
         </article>
       </section>
@@ -127,22 +123,19 @@
             <i class="cf cf-coss"></i>
             <h3>Liquidity</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-              ea commodo consequat. </p>
+              dolore magna aliqua.  </p>
           </div>
           <div class="icon-box icb2 wow fadeIn">
             <i class="cf cf-day"></i>
             <h3>Fast Transfers</h3>
             <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-              aliquip ex ea commodo consequat.</p>
+              labore et dolore magna aliqua. </p>
           </div>
           <div class="icon-box icb3 wow fadeIn">
             <i class="cf cf-sent"></i>
             <h3>Security</h3>
             <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-              aliquip ex ea commodo consequat.</p>
+              labore et dolore magna aliqua. </p>
           </div>
         </article>
       </section>
@@ -223,7 +216,7 @@
               
               
   
-              <form class="text-center border border-light p-5 contact-page-1" id="contact-form" name="contact-form" action="mail.php" method="POST">
+              <form class="text-center border border-light p-5 contact-page-1 homepagecontact" id="contact-form" name="contact-form" action="mail.php" method="POST">
                 <p class="h4 mb-4">CONTACT US</p>
   
                 <!--Grid row-->
