--- a/index.html
+++ b/index.html
@@ -78,8 +78,7 @@
           <img src="img/bitcoin_2.jpg" alt="" class="picture-1">
           <div class="container-1">
             <h2>Why Invest in Cryptocurrency?</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
+            <p>Investing in Bitcoin or other cryptocurrencies is a safe way to diversify your investments.</p>
           </div>
         </article>
       </section>
@@ -89,8 +88,7 @@
           <img src="img/bitcoin_2007769_1920.jpg" class="mobile-show">
           <div class="container-2">
             <h2>How We Can Help You Invest</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua. </p>
+            <p>Our team of advisors are well versed in safe investing and cryptocurrency management.</p>
           </div>
           <img src="img/bitcoin_2007769_1920.jpg" alt="" class="picture-2">
         </article>
@@ -100,20 +98,17 @@
           <div class="icon-box icb1 wow fadeIn">
             <i class="cf cf-chc"></i>
             <h3>Blockchain Technology</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.  </p>
+            <p>Standard blockchain technology.  What you purchase or invest in belongs to you and only you.</p>
           </div>
           <div class="icon-box icb2 wow fadeIn">
             <i class="cf cf-btc"></i>
             <h3>Investment</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.  </p>
+            <p>We have a team of expert cryptocurrency advisors who can help you invest safely and profitably.</p>
           </div>
           <div class="icon-box icb3 wow fadeIn">
             <i class="cf cf-senc"></i>
             <h3>Desktop Wallets</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.  </p>
+            <p>Our desktop wallets allow you to store cryptocurrency securely.</p>
           </div>
         </article>
       </section>
@@ -122,20 +117,17 @@
           <div class="icon-box wow fadeIn">
             <i class="cf cf-coss"></i>
             <h3>Liquidity</h3>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-              dolore magna aliqua.  </p>
+            <p>You can quickly turn your cryptocurrency into cash.</p>
           </div>
           <div class="icon-box icb2 wow fadeIn">
             <i class="cf cf-day"></i>
             <h3>Fast Transfers</h3>
-            <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. </p>
+            <p class="pad">Transfers and purchases are processed quickly and reliably.</p>
           </div>
           <div class="icon-box icb3 wow fadeIn">
             <i class="cf cf-sent"></i>
             <h3>Security</h3>
-            <p class="pad">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua. </p>
+            <p class="pad">Our servers and wallets are encrypted and have top level security.</p>
           </div>
         </article>
       </section>
